@@ -1,8 +1,5 @@
 package org.openlca.ilcd.util;
 
-import java.util.Collections;
-import java.util.List;
-
 import org.openlca.ilcd.commons.DataEntry;
 import org.openlca.ilcd.commons.Publication;
 import org.openlca.ilcd.units.AdminInfo;
@@ -11,7 +8,8 @@ import org.openlca.ilcd.units.QuantitativeReference;
 import org.openlca.ilcd.units.Unit;
 import org.openlca.ilcd.units.UnitGroup;
 import org.openlca.ilcd.units.UnitGroupInfo;
-import org.openlca.ilcd.units.UnitList;
+
+import java.util.List;
 
 public final class UnitGroups {
 
@@ -20,101 +18,74 @@ public final class UnitGroups {
 
 	public static UnitGroupInfo getUnitGroupInfo(UnitGroup u) {
 		return u != null
-			? u.unitGroupInfo
+			? u.getUnitGroupInfo()
 			: null;
 	}
 
-	public static UnitGroupInfo forceUnitGroupInfo(UnitGroup u) {
-		if (u.unitGroupInfo == null) {
-			u.unitGroupInfo = new UnitGroupInfo();
-		}
-		return u.unitGroupInfo;
+	public static UnitGroupInfo withUnitGroupInfo(UnitGroup u) {
+		return u.withUnitGroupInfo();
 	}
 
 	public static DataSetInfo getDataSetInfo(UnitGroup u) {
 		var info = getUnitGroupInfo(u);
 		return info != null
-			? info.dataSetInfo
+			? info.getDataSetInfo()
 			: null;
 	}
 
-	public static DataSetInfo foceDataSetInfo(UnitGroup u) {
-		var info = forceUnitGroupInfo(u);
-		if (info.dataSetInfo == null) {
-			info.dataSetInfo = new DataSetInfo();
-		}
-		return info.dataSetInfo;
+	public static DataSetInfo withDataSetInfo(UnitGroup u) {
+		return u.withUnitGroupInfo().withDataSetInfo();
 	}
 
 	public static QuantitativeReference getQuantitativeReference(UnitGroup u) {
 		var info = getUnitGroupInfo(u);
 		return info != null
-			? info.quantitativeReference
+			? info.getQuantitativeReference()
 			: null;
 	}
 
-	public static QuantitativeReference forceQuantitativeReference(UnitGroup u) {
-		var info = forceUnitGroupInfo(u);
-		if (info.quantitativeReference == null) {
-			info.quantitativeReference = new QuantitativeReference();
-		}
-		return info.quantitativeReference;
+	public static QuantitativeReference withQuantitativeReference(UnitGroup u) {
+		return u.withUnitGroupInfo().withQuantitativeReference();
 	}
 
 	public static AdminInfo getAdminInfo(UnitGroup u) {
 		return u != null
-			? u.adminInfo
+			? u.getAdminInfo()
 			: null;
 	}
 
-	public static AdminInfo forceAdminInfo(UnitGroup u) {
-		if (u.adminInfo == null) {
-			u.adminInfo = new AdminInfo();
-		}
-		return u.adminInfo;
+	public static AdminInfo withAdminInfo(UnitGroup u) {
+		return u.withAdminInfo();
 	}
 
 	public static DataEntry getDataEntry(UnitGroup u) {
 		var info = getAdminInfo(u);
 		return info != null
-			? info.dataEntry
+			? info.getDataEntry()
 			: null;
 	}
 
-	public static DataEntry forceDataEntry(UnitGroup u) {
-		var info = forceAdminInfo(u);
-		if (info.dataEntry == null) {
-			info.dataEntry = new DataEntry();
-		}
-		return info.dataEntry;
+	public static DataEntry withDataEntry(UnitGroup u) {
+		return u.withAdminInfo().withDataEntry();
 	}
 
 	public static Publication getPublication(UnitGroup u) {
 		var info = getAdminInfo(u);
 		return info != null
-			? info.publication
+			? info.getPublication()
 			: null;
 	}
 
-	public static Publication forcePublication(UnitGroup u) {
-		var info = forceAdminInfo(u);
-		if (info.publication == null) {
-			info.publication = new Publication();
-		}
-		return info.publication;
+	public static Publication withPublication(UnitGroup u) {
+		return u.withAdminInfo().withPublication();
 	}
 
 	public static List<Unit> getUnits(UnitGroup u) {
-		return u == null || u.unitList == null
-			? Collections.emptyList()
-			: u.unitList.units;
+		return u != null ? u.getUnits() : List.of();
 	}
 
-	public static List<Unit> forceUnits(UnitGroup u) {
-		if (u.unitList == null) {
-			u.unitList = new UnitList();
-		}
-		return u.unitList.units;
+	public static List<Unit> withUnits(UnitGroup u) {
+		return u.withUnits();
 	}
 
 	public static Unit getReferenceUnit(UnitGroup u) {
@@ -124,7 +95,7 @@ public final class UnitGroups {
 		for (Unit unit : getUnits(u)) {
 			if (unit == null)
 				continue;
-			if (unit.id == qRef.referenceUnit)
+			if (unit.getId() == qRef.getReferenceUnit())
 				return unit;
 		}
 		return null;
